Wed Jul 16 18:49:11 2003  Joern Thyssen  <jth@gnubg.org>

	Introduce flag to set the numbers of digits output for
	probabilities and equities.
	(derived from bug #4236 by Ian Shaw)

	* gnubg.c: new command "set output digits ..."			
	* text.c (OutputEquity, OutputMoneyEquity, OutputEquityScale,
	OutputEquityDiff, OutputMWC, OutputPercent): generate format
	dynamically using new flag fOutputDigits
	* progress.c (GTKRolloutProgress): use Output* functions instead
	of hardcoded logic.

Wed Jul 16 15:57:01 2003  Joern Thyssen  <jth@gnubg.org>

	Revert changes dated Wed Jul  9 10:32:08 2003 pending
	discussion on bug-gnubg@gnu.org

	* text.c

Wed Jul 16 14:57:00 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandRollout): only save rollout into movelist, if
	this is a rollout of a move!
	(bug #4313 reported by Ian Shaw)

Wed Jul 16 12:21:20 2003  Joern Thyssen  <jth@gnubg.org>

	Change rollouts routines to accept a progress callback instead
	of currently hardcoded GTK+ calls.

	* rollout.c (GeneralEvaluation, GneralEvaluationR,
	GeneralCubeDecision, GeneralCubeDecisionR): change prototype to
	include progress callback.
	* rollout.c (RolloutGeneral): replaced hardcoded calls with
	calls to passed progress callback.
	* progress.c: new file with default progress initialisers and 
	callbacks.
	* gnubg.c (CommandRollout): bring up hint dialog after
	"rollout =cube" and "rollout =1 =2 =3". 
	* gnubg.c, gtkchequer.c, gtkcube.c, database.c, analysis.c, external.c: 
	change calls to rollout functions.
	* gtkgame.c: move GTK rollout progress stuff to new file progress.c

Tue Jul 15 19:52:54 2003  Holger Bochnig <hbgg@gmx.net>

	* set.c: sockets: added includes for Windows

Tue Jul 15 17:07:45 2003  Holger Bochnig <hbgg@gmx.net>

	* gnubgmodule.c gnubgmodule.h: if-guard python extensions

Tue Jul 15 00:11:02 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (GeneralCubeDecisionR): fix bug leading to wrong
	cube decision rollouts.
